--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,10 +6,8 @@ phases:
       - echo Connecting to Amazon ECR...
       - aws --version
       # - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-      - aws ecr get-login-password --region ap-northeast-1 | docker login
-        --username AWS --password-stdin
-        430582913290.dkr.ecr.ap-northeast-1.amazonaws.com
-      - REPOSITORY_URI=430582913290.dkr.ecr.ap-northeast-1.amazonaws.com/node-app
+      - aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin 430582913290.dkr.ecr.ap-northeast-1.amazonaws.com
+      - REPOSITORY_URI=430582913290.dkr.ecr.ap-northeast-1.amazonaws.com/pyapp
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   build:
